--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my project website",
   "main": "index.js",
   "scripts": {
+    "build":"npm install",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
