--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my project website",
   "main": "index.js",
   "scripts": {
-    "build":"npm install",
+    "build":"echo success",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
